# alpha-trading-crypto

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  RULES.md  STATUS.md  pyproject.toml
alpha_trading_crypto/: __init__.py
alpha_trading_crypto/application/ports/: __init__.py  backtest_port.py  blockchain_port.py  exchange_port.py
alpha_trading_crypto/application/use_cases/: __init__.py  market_making_use_cases.py  order_use_cases.py  strategy_use_cases.py  transfer_use_cases.py
alpha_trading_crypto/domain/: __init__.py
alpha_trading_crypto/domain/entities/: __init__.py  inventory.py  order.py  position.py  token.py  transfer.py
alpha_trading_crypto/domain/services/: __init__.py  avellaneda_stoikov.py  avellaneda_stoikov_adapter.py  inventory_manager.py  market_making_service.py  order_manager.py  position_manager.py  transfer_manager.py
alpha_trading_crypto/infrastructure/: __init__.py  exceptions.py
alpha_trading_crypto/infrastructure/adapters/: __init__.py  backtest_adapter.py  blockchain_adapter.py  exchange_adapter.py  hyperliquid_api.py
alpha_trading_crypto/infrastructure/backtest/: __init__.py  backtest_engine.py
alpha_trading_crypto/infrastructure/blockchain/: __init__.py  ethereum_provider.py  token_transfer_service.py
tests/application/: __init__.py
tests/application/use_cases/: __init__.py  test_market_making_use_cases.py  test_order_use_cases.py  test_strategy_use_cases.py  test_transfer_use_cases.py
tests/domain/services/: __init__.py  test_avellaneda_stoikov.py  test_market_making_service.py
tests/infrastructure/adapters/: test_hyperliquid_api.py
tests/infrastructure/backtest/: __init__.py  test_backtest_engine.py
tests/infrastructure/blockchain/: __init__.py  test_ethereum_provider.py  test_token_transfer_service.py
